--- a/job-manager-app/package.json
+++ b/job-manager-app/package.json
@@ -11,12 +11,14 @@
     "@apollo/client": "^3.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "lodash": "^4.17.21",
+    "material-ui-chip-input": "^1.1.0",
     "next": "10.1.1",
     "react": "17.0.2",
     "react-apollo": "^3.1.5",
